# Cpp_CA1_ImageManipulation

./: CMakeLists.txt  Image.cpp  Image.h  README.md  main.cpp
